--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -30,9 +30,7 @@
 
         <argument
             android:name="objectId"
-            android:defaultValue=""
-            app:argType="string"
-            app:nullable="false" />
+            app:argType="string" />
 
     </fragment>
 
