move text to resource, improve code

--- a/app/src/main/res/layout/row_add_fragment.xml
+++ b/app/src/main/res/layout/row_add_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,13 +9,12 @@
         android:id="@+id/addRowButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:text="save"
+        android:contentDescription="@string/app_name"
         android:src="@drawable/ic_file_done"
+        android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -25,7 +25,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:hint="Name"
+        android:hint="@string/name_row"
         android:imeOptions="actionDone"
         android:inputType="textVisiblePassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
             style="@style/TextInputEditTextDefault"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionDone"
+            android:imeOptions="actionNext"
             android:inputType="textVisiblePassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,7 +50,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:hint="Count"
+        android:hint="@string/count"
         android:imeOptions="actionDone"
         android:inputType="textVisiblePassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,8 +64,9 @@
             style="@style/TextInputEditTextDefault"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionDone"
-            android:inputType="number" />
+            android:imeOptions="actionNext"
+            android:inputType="numberDecimal"
+            tools:ignore="VisualLintTextFieldSize" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -76,7 +77,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:hint="Price"
+        android:hint="@string/price"
         android:imeOptions="actionDone"
         android:inputType="textVisiblePassword"
         app:layout_constraintBottom_toBottomOf="@+id/addRowCountLayout"
@@ -91,6 +92,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:imeOptions="actionDone"
-            android:inputType="number" />
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
