handle click onō count, show keyboard with show bottom dialog

--- a/app/src/main/res/layout/sample_dialog_one.xml
+++ b/app/src/main/res/layout/sample_dialog_one.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="16dp"
         android:autofillHints="no"
         android:background="@drawable/edit_text_border"
-        android:hint="Count"
+        android:hint="@string/count"
         android:inputType="numberDecimal"
         android:imeOptions="actionNext"
         android:paddingStart="8dp"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:autofillHints="no"
         android:background="@drawable/edit_text_border"
-        android:hint="Price"
+        android:hint="@string/price"
         android:inputType="numberDecimal"
         android:paddingStart="8dp"
         android:paddingTop="16dp"
