--- a/app/src/main/res/layout/row_adapter_item.xml
+++ b/app/src/main/res/layout/row_adapter_item.xml
@@ -38,8 +38,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
-        android:gravity="end|bottom"
-        android:textSize="18sp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/row_item_name"
         app:layout_constraintStart_toEndOf="@+id/row_item_name"
         app:layout_constraintTop_toTopOf="@+id/row_item_name"
@@ -52,8 +53,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
+        android:ellipsize="end"
+        android:lines="1"
         android:gravity="end|bottom"
-        android:textSize="18sp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/row_item_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/row_item_count"
