--- a/app/src/main/res/layout/row_adapter_item.xml
+++ b/app/src/main/res/layout/row_adapter_item.xml
@@ -1,68 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp">
+    android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatCheckBox
-        android:id="@+id/rowItemCheckDone"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/row_item_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp">
 
-    <TextView
-        android:id="@+id/row_item_name"
-        style="@style/Subtitle1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/row_item_count"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toEndOf="@+id/rowItemCheckDone"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        tools:text="Text" />
+        <androidx.appcompat.widget.AppCompatCheckBox
+            android:id="@+id/rowItemCheckDone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@+id/rowItemName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/row_item_count"
-        style="@style/Body_base"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/row_item_name"
-        app:layout_constraintStart_toEndOf="@+id/row_item_name"
-        app:layout_constraintTop_toTopOf="@+id/row_item_name"
-        app:layout_constraintWidth_percent="0.1"
-        tools:text="Text" />
+        <TextView
+            android:id="@+id/rowItemName"
+            style="@style/Subtitle1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/rowItemCount"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toEndOf="@+id/rowItemCheckDone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            tools:text="Text" />
 
-    <TextView
-        android:id="@+id/row_item_price"
-        style="@style/Body_base"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:ellipsize="end"
-        android:lines="1"
-        android:gravity="end|bottom"
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/row_item_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/row_item_count"
-        app:layout_constraintTop_toTopOf="@+id/row_item_name"
-        app:layout_constraintWidth_percent="0.2"
-        tools:text="Text" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/rowItemCount"
+            style="@style/Body_base"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
+            android:textSize="14sp"
+            android:gravity="end"
+            app:layout_constraintBottom_toBottomOf="@+id/rowItemName"
+            app:layout_constraintStart_toEndOf="@+id/rowItemName"
+            app:layout_constraintTop_toTopOf="@+id/rowItemName"
+            app:layout_constraintWidth_percent="0.075"
+            tools:text="Text" />
+
+        <TextView
+            android:id="@+id/row_item_price"
+            style="@style/Body_base"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:lines="1"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/rowItemName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rowItemCount"
+            app:layout_constraintTop_toTopOf="@+id/rowItemName"
+            app:layout_constraintWidth_percent="0.15"
+            tools:text="Text" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
