rename package second to folder

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -25,7 +25,7 @@
 
     <fragment
         android:id="@+id/folderPreviewFragment"
-        android:name="com.greybot.mycosts.present.second.preview.FolderPreviewFragment"
+        android:name="com.greybot.mycosts.present.folder.preview.FolderPreviewFragment"
         android:label="FolderPreviewFragment">
 
         <argument
@@ -44,7 +44,7 @@
 
     <fragment
         android:id="@+id/folderAddFragment"
-        android:name="com.greybot.mycosts.present.second.add.FolderAddFragment"
+        android:name="com.greybot.mycosts.present.folder.add.FolderAddFragment"
         android:label="FolderAddFragment">
 
         <argument
@@ -64,7 +64,7 @@
 
     <fragment
         android:id="@+id/FolderEditFragment"
-        android:name="com.greybot.mycosts.present.second.add.FolderEditFragment"
+        android:name="com.greybot.mycosts.present.folder.add.FolderEditFragment"
         android:label="FolderAddFragment">
 
         <argument
@@ -123,7 +123,7 @@
 
     <fragment
         android:id="@+id/ExploreAddRootFragment"
-        android:name="com.greybot.mycosts.present.second.add.FolderAddFragment"
+        android:name="com.greybot.mycosts.present.folder.add.FolderAddFragment"
         android:label="ExploreAddRootFragment" />
 
 </navigation>
