changed the data type of the count number

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -124,6 +124,12 @@
     <fragment
         android:id="@+id/ExploreAddRootFragment"
         android:name="com.greybot.mycosts.present.folder.add.FolderAddFragment"
-        android:label="ExploreAddRootFragment" />
+        android:label="ExploreAddRootFragment">
+
+        <argument
+            android:name="objectId"
+            app:argType="string" />
+
+    </fragment>
 
 </navigation>
