--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="black_disable">#61000000</color>
     <color name="black_opacity_35">#59000000</color>
     <color name="divider_color">#CCCCCC</color>
+    <color name="total_bg_color">#F6F6F6</color>
     <color name="text_high">#000000</color>
     <color name="text_medium">#E7382B</color>
     <color name="tint_primary">#968756</color>
